--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <a href="index.html"><title>StockX About</title></a>
+    <title>StockX About</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <!--Header-->
     <header class="header container flex">
-        <a class="Logo flex">
+        <a href="index.html" class="Logo flex">
             <img src="images/logo.PNG" alt="logo">
         </a>
         <ul class="rightheader flex">
